methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:5: error: ')' expected but 'true' found.
    if(&isFacingWall!=true){
                      ^SlugTracking:8: error: ';' expected but '.' found.
    if (getGroundColor()==Color.green) {
                               ^