methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  while (isOverBaggle!=true){
  	forward();
    if(&isFacingWall!=true){
      left();
    }
  	if (getGroundColor()==Color.green) {
    	backward();brushDown();forward();brushUp();
  	} else {
      backward();
      left();
    }
  }
  pickupBaggle();
  return true
}